--- a/view-advertisers.html
+++ b/view-advertisers.html
@@ -113,7 +113,7 @@
     background-color: var(--primary-color);
   }
 
-  .card {
+  .border-right .card {
     margin: 0px;
     box-shadow: none;
   }
@@ -465,21 +465,25 @@
             <!-- Stats Row -->
             <div class="row mb-4">
               <div class="col-md-6">
-                <div class="stat-item">
+                <div class="card">
+                  <div class="stat-item">
                   <div class="stat-icon">
                     <i class="fas fa-project-diagram"></i>
                   </div>
                   <h3 class="mb-1">47</h3>
                   <p class="text-muted mb-0">Commission Rate</p>
                 </div>
+                </div>
               </div>
               <div class="col-md-6">
-                <div class="stat-item">
+                <div class="card">
+                  <div class="stat-item">
                   <div class="stat-icon">
                     <i class="fas fa-trophy"></i>
                   </div>
                   <h3 class="mb-1">12</h3>
                   <p class="text-muted mb-0">Avg. Payout (Days)</p>
+                </div>
                 </div>
               </div>
 
@@ -517,16 +521,16 @@
             <!-- Tabs Content -->
             <div class="tab-content" id="profileTabsContent">
               <!-- Activity Tab -->
-              <div class="tab-pane fade " id="transaction" role="tabpanel">
+              <div class="tab-pane fade show active" id="transaction" role="tabpanel">
                 <div class="card p-0">
                   <div class="card-body p-0">
                     <table class="table table-sm" style="font-size: 0.875rem;">
                       <thead class="text-white" style="background-color: #6777ef;">
                         <tr>
-                          <th scope="col" class="pl-3 py-2"><i class="fas fa-hashtag mr-1"></i> ID</th>
-                          <th scope="col" class="py-2"><i class="fas fa-user mr-1"></i> Name</th>
-                          <th scope="col" class="py-2"><i class="fas fa-calendar-alt mr-1"></i> Date</th>
-                          <th scope="col" class="pr-3 py-2"><i class="fas fa-check-circle mr-1"></i> Status</th>
+                          <th scope="col" class="pl-3 py-2">ID</th>
+                          <th scope="col" class="py-2">Name</th>
+                          <th scope="col" class="py-2">Date</th>
+                          <th scope="col" class="pr-3 py-2">Status</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -555,7 +559,7 @@
               </div>
 
               <!-- Projects Tab -->
-              <div class="tab-pane fade show active" id="links" role="tabpanel">
+              <div class="tab-pane fade" id="links" role="tabpanel">
                 <div class="profile-card">
                   <div class="row">
                     <!-- Tracking Link Box -->
